<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.kumuluz.ee.openapi</groupId>
    <artifactId>kumuluzee-openapi-mp-parent</artifactId>
    <packaging>pom</packaging>
    <version>3.0.0-SNAPSHOT</version>
    <modules>
        <module>core</module>
        <module>ui</module>
        <module>tools</module>
        <module>common</module>
    </modules>

    <name>KumuluzEE OpenAPI MicroProfile Parent</name>

    <inceptionYear>2019</inceptionYear>
    <description>
        KumuluzEE OpenAPI extension provides powerful tools to incorporate the OpenAPI Specification to your microservice.
    </description>

    <url>https://ee.kumuluz.com</url>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <jakarta-xml-bind-api.version>4.0.1</jakarta-xml-bind-api.version>
        <jaxb-impl.version>4.0.4</jaxb-impl.version>

        <kumuluzee.version>5.0.0-SNAPSHOT</kumuluzee.version>
        <kumuluzee-config-mp.version>3.0.0-SNAPSHOT</kumuluzee-config-mp.version>
        <kumuluzee-arquillian-container.version>2.0.0-SNAPSHOT</kumuluzee-arquillian-container.version>

        <microprofile-openapi.version>3.1.1</microprofile-openapi.version>
        <smallrye-open-api.version>3.7.0</smallrye-open-api.version>
        <classgraph.version>4.8.164</classgraph.version>
        <swagger-ui.version>5.9.4</swagger-ui.version>
        <maven-core.version>3.9.5</maven-core.version>

        <testng.version>7.8.0</testng.version>
        <arquillian.version>1.8.0.Final</arquillian.version>
        <org.mockito.version>5.7.0</org.mockito.version>
        <assertj.version>3.24.2</assertj.version>
        <jcommander.version>1.82</jcommander.version>

        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
        <nexus.staging.plugin.version>1.6.13</nexus.staging.plugin.version>
        <gpg.plugin.version>3.1.0</gpg.plugin.version>
        <surefire.plugin.version>3.2.2</surefire.plugin.version>
        <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
        <download-maven-plugin.version>1.7.1</download-maven-plugin.version>
        <maven-plugin-plugin.version>3.10.2</maven-plugin-plugin.version>

        <guava.version>32.1.3-jre</guava.version>
    </properties>

    <scm>
        <connection>scm:git:git@github.com:kumuluz/kumuluzee-openapi-mp.git</connection>
        <developerConnection>scm:git:git@github.com:kumuluz/kumuluzee-openapi-mp.git</developerConnection>
        <url>git@github.com:kumuluz/kumuluzee-openapi-mp.git</url>
    </scm>

    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/kumuluz/kumuluzee-openapi-mp/issues</url>
    </issueManagement>

    <developers>
        <developer>
            <name>KumuluzEE Development Team</name>
            <id>kumuluz</id>
            <email>info@kumuluz.com</email>
            <url>https://github.com/kumuluz</url>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>sonatype-snapshots</id>
            <name>OSS Sonatype repo (snapshots)</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.kumuluz.ee</groupId>
                <artifactId>kumuluzee-bom</artifactId>
                <version>${kumuluzee.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.jboss.arquillian</groupId>
                <artifactId>arquillian-bom</artifactId>
                <version>${arquillian.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>

            <dependency>
                <groupId>com.kumuluz.ee.config</groupId>
                <artifactId>kumuluzee-config-mp</artifactId>
                <version>${kumuluzee-config-mp.version}</version>
            </dependency>

            <dependency>
                <groupId>io.smallrye</groupId>
                <artifactId>smallrye-open-api-core</artifactId>
                <version>${smallrye-open-api.version}</version>
            </dependency>
            <dependency>
                <groupId>io.smallrye</groupId>
                <artifactId>smallrye-open-api-jaxrs</artifactId>
                <version>${smallrye-open-api.version}</version>
            </dependency>
            <dependency>
                <groupId>io.smallrye</groupId>
                <artifactId>smallrye-open-api-maven-plugin</artifactId>
                <version>${smallrye-open-api.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.classgraph</groupId>
                <artifactId>classgraph</artifactId>
                <version>${classgraph.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.maven</groupId>
                <artifactId>maven-core</artifactId>
                <version>${maven-core.version}</version>
            </dependency>

            <dependency>
                <groupId>org.eclipse.microprofile.openapi</groupId>
                <artifactId>microprofile-openapi-tck</artifactId>
                <version>${microprofile-openapi.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.kumuluz.ee.testing</groupId>
                <artifactId>kumuluzee-arquillian-container</artifactId>
                <version>${kumuluzee-arquillian-container.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.testng</groupId>
                <artifactId>testng</artifactId>
                <version>${testng.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${org.mockito.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>${nexus.staging.plugin.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>deploy</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>${gpg.plugin.version}</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <gpgArguments>
                                        <arg>--pinentry-mode</arg>
                                        <arg>loopback</arg>
                                    </gpgArguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>